--- a/style/style.css
+++ b/style/style.css
@@ -9,6 +9,7 @@ nav{
     display: flex;
     justify-content: space-between;
     align-items: center;
+    margin: 0 200px;
 }
 .nav-title {
   color: #181818;
@@ -41,4 +42,43 @@ nav a{
 }
 .primary-btn:hover{
   background-color: aqua;
+}
+
+/* header related info */
+
+.header{
+  background-color: #FFF8F3;
+  background-image: url(../images/header_bg.png);
+  background-repeat: no-repeat;
+  background-position: bottom right;
+
+}
+.banner{
+  padding: 30px 30px 0px 150px;
+  display: flex;
+  align-items:center;
+  justify-content: space-between;
+}
+
+.banner h3 {
+  font-size: 19px;
+  padding: 6px;
+  margin-bottom: -16px;
+}
+.banner p {
+  max-width: 764px;
+}
+.banner .hero-img{
+  max-width: 100%;
+}
+
+.about {
+  background-color: #FFF8F3;
+  margin: 82px 0px;
+
+}
+
+.about h3{
+  text-align: center;
+  
 }
