--- a/style/style.css
+++ b/style/style.css
@@ -75,10 +75,22 @@ nav a{
 .about {
   background-color: #FFF8F3;
   margin: 82px 0px;
-
+  padding: 41px;
 }
 
 .about h3{
   text-align: center;
   
+}
+main{
+  max-width: 1140px;
+ margin: 0px auto;
+}
+.about-info{
+  display: flex;
+  justify-content: space-around;
+  align-items: center;
+}
+.about-details h3{
+  padding-bottom: 10px;
 }
